--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://https://david-gilet.github.io/depot_ios/Pipm-visite-photos.ipa</string>
+                        <string>https://david-gilet.github.io/depot-ios/Pipm-visite-photos.ipa</string>
                     </dict>
                 </array> 
                 <key>metadata</key>
